@@ -48,7 +48,7 @@ installing ``tox`` then substitute the above **Python build step** code
 with this::
 
     import urllib, os
-    url = "https://pytox.googlecode.com/hg/toxbootstrap.py"
+    url = "https://bitbucket.org/hpk42/tox/raw/default/toxbootstrap.py"
     #os.environ['USETOXDEV']="1"  # use tox dev version
     d = dict(__file__='toxbootstrap.py')
     exec urllib.urlopen(url).read() in d
@@ -65,7 +65,7 @@ install ``tox`` in a virtual sub environment.  Notes:
   will cause tox to reinstall all virtual environments all the time
   which is often what one wants in CI server contexts)
 
-.. _`toxbootstrap.py`: https://pytox.googlecode.com/hg/toxbootstrap.py
+.. _`toxbootstrap.py`: https://bitbucket.org/hpk42/tox/raw/default/toxbootstrap.py
 
 Integrating "sphinx" documentation checks in a Jenkins job
 ----------------------------------------------------------------
